# pyChatter

./: py_chatter.py  pyproject.toml
static/css/: style.css
templates/: base.html  home.html  room.html
